# base/src/main/scala/simex/collectionpoint/domain/orchestrator/CollectionPointMessageHandlerAlgebra.scala
@@ -1,0 +1,10 @@
+package simex.collectionpoint.domain.orchestrator
+
+import simex.messaging.Simex
+
+trait CollectionPointMessageHandlerAlgebra[F[_]] {
+
+  def handleSimexMessage(message: Simex): F[Unit]
+
+  def getResponse(request: Simex): F[Option[Simex]]
+}
